[package]
name = "fly-dist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.3.1", features = ["v4", "serde"] }
